<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="10dp"
    android:id="@+id/cardView_expense_item"
    android:layout_margin="5dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textView_description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/note_description"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="18sp"
                android:id="@+id/textView_category"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/category"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16sp"
                android:id="@+id/textView_date"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/date"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/curreny_sign"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textView_amount_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>