<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:background="@color/blue_shade">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            android:textAlignment="center"
            android:background="@color/blue_shade" />

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/business"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/sports"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/technology"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/entertainment"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/general"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/health"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/science"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/button_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:backgroundTint="@color/cyan"
                android:padding="6dp"
                android:text="@string/weather"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"

                />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:defaultQueryHint="Search for News"
            app:iconifiedByDefault="false" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>