<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/blue_shade"
    tools:context=".AddExpenseActivity">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="15dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/textView_amount"
                android:textColor="@color/cyan"
                />
            <EditText
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_amount"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radioGroup_type"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioButton_income"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/blue_shade"
                />
            <RadioButton
                android:id="@+id/radioButton_expense"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:layout_marginStart="15dp"
                android:textColor="@color/blue_shade"
                />
        </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_description"
            android:id="@+id/textView_note"
            android:textColor="@color/shade_blue"
            />
        <EditText
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_note"
            android:inputType="text"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Category"
                android:textColor="@color/cyan"
                />
            <EditText
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_category"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/add"
                android:textStyle="bold"
                android:backgroundTint="@color/cyan"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="21sp"
                android:id="@+id/button_add"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:textStyle="bold"
                android:layout_marginStart="90dp"
                android:backgroundTint="@color/cyan"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="21sp"
                android:id="@+id/button_delete"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>